Refactor(PostgresDBExpressionGenerator) generateExpressionInternal into two helper methods